--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -18,6 +18,16 @@
         font-size: 18px;
     }
 
+    .only-mobile{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        color: #fff;
+        font-size: 18px;
+        padding-bottom: 10px;
+    }
+
     .tablet-only span{ 
         font-size: inherit;
     }
@@ -226,6 +236,26 @@
     } 
 }
 
+@media only screen and (orientation: landscape) and (max-width:780px){
+    #left{
+        height: 45vh;
+    }
+    .logo {
+        width: 20%;
+        top: 10px;
+    }
+
+    .campanha {
+        width: 210px;
+        height: 128px;
+        object-position: -5px;
+    }
+
+    #contacts h1 {
+        font-size: 12pt;
+        margin-bottom: 0px;
+    }
+}
 @media (min-width:600px) { /* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */ }
 @media (min-width:480px) { /* smartphones, Android phones, landscape iPhone */ }
 @media (min-width:801px) { /* tablet, landscape iPad, lo-res laptops ands desktops */ }
